# majestic-manager

./: .gitignore  CMakeLists.txt  configure-wlan.sh  install_dependencies.sh  static-zoom.sh
mission_planner/: main.py
orange-pi/: README.md  configure-eth.sh  configure-mavproxy-service.sh  main.py
runcam/: Makefile  README.md  S99majestic-manager  S99wifi  configure-wlan.sh  eth0  majestic.yaml  majestic_config.c  majestic_config.h  majestic_manager.c  majestic_process.c  majestic_process.h  majetic_manager.c  matek_mavlink.c  matek_mavlink.h  mavlink.c  mavlink.h  mavlink_heartbeat.c  mavlink_proto.h  zoom_control.c
